accounts db properties

--- a/configuration/accounts/production/application.yml
+++ b/configuration/accounts/production/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 7777
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/accounts?serverTimezone=Europe/Warsaw&allowPublicKeyRetrieval=true&useSSL=False
+    username: kodilla_user
+    password: kodilla_password
+  jpa:
+    database: mysql
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
