--- a/configuration/accounts/production/application.yml
+++ b/configuration/accounts/production/application.yml
@@ -5,4 +5,4 @@ accounts:
     url: jdbc:mysql://localhost:3306/accounts?serverTimezone=Europe/Warsaw&allowPublicKeyRetrieval=true&useSSL=False
     username: kodilla_user
     password: kodilla_password
-  allow-get-accounts: true
+  allow-get-accounts: false
