--- a/configuration/customer/production/application.yml
+++ b/configuration/customer/production/application.yml
@@ -1,8 +1,8 @@
 server:
   port: 7778
-accounts:
+customer:
   datasource:
     url: jdbc:mysql://localhost:3306/customer?serverTimezone=Europe/Warsaw&allowPublicKeyRetrieval=true&useSSL=False
     username: kodilla_user
     password: kodilla_password
-  allow-get-accounts: true
+  allow-get-customer: true
